--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,8 @@
 <title>Apache desde GitHub</title>
 </head>
 <body>
-<h1>Desplegado automáticamente desde GitHub 🚀</h1>
+<h1>Desplegado automáticamente desde GitHub KEVIN 🚀</h1>
 <p>Versión inicial CI/CD.</p>
+<p>Versión 2 desplegada automáticamente.</p>
 </body>
 </html>
